gamescreen cleanup